--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* For Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #000000 #ffffff;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* For Chrome, Safari, and Opera */
+  ::-webkit-scrollbar {
+    width: 8px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  ::-webkit-scrollbar-track {
+    background-color: #ffffff;
   }
-}
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #000000;
+  }
+  
